--- a/src/app/theme/layouts/aside-nav/aside-nav.component.html
+++ b/src/app/theme/layouts/aside-nav/aside-nav.component.html
@@ -19,6 +19,158 @@
 					</span>
 				</a>
 			</li>
+                        
+                        
+                        <li class="m-menu__item  m-menu__item--submenu" routerLinkActive="m-menu__item--open" routerLinkActiveOptions="{ exact: true }"  aria-haspopup="true"  data-menu-submenu-toggle="hover">
+				<a  href="#" class="m-menu__link m-menu__toggle">
+					<i class="m-menu__link-icon flaticon-users"></i>
+					<span class="m-menu__link-text">
+						Client Manager
+					</span>
+					<i class="m-menu__ver-arrow la la-angle-right"></i>
+				</a>
+				<div class="m-menu__submenu">
+					<span class="m-menu__arrow"></span>
+					<ul class="m-menu__subnav">
+						<li class="m-menu__item  m-menu__item--parent" routerLinkActive="m-menu__item--active" routerLinkActiveOptions="{ exact: true }"  aria-haspopup="true" >
+							<span class="m-menu__link">
+								<span class="m-menu__link-text">
+									Manage Clients
+								</span>
+							</span>
+						</li>
+						<li class="m-menu__item" routerLinkActive="m-menu__item--active" routerLinkActiveOptions="{ exact: true }"  aria-haspopup="true" >
+							<a  routerLink="/user" class="m-menu__link">
+								<i class="m-menu__link-bullet m-menu__link-bullet--dot">
+									<span></span>
+								</i>
+								<span class="m-menu__link-text">
+									Manage Clients
+								</span>
+							</a>
+						</li> 
+                                                <li class="m-menu__item" routerLinkActive="m-menu__item--active" routerLinkActiveOptions="{ exact: true }"  aria-haspopup="true" >
+							<a  routerLink="/components/forms/validation/form-controls" class="m-menu__link">
+								<i class="m-menu__link-bullet m-menu__link-bullet--dot">
+									<span></span>
+								</i>
+								<span class="m-menu__link-text">
+									Add Clients
+								</span>
+							</a>
+						</li> 
+					</ul>
+				</div>
+			</li>
+                        
+                        
+                        <li class="m-menu__item  m-menu__item--submenu" routerLinkActive="m-menu__item--open" routerLinkActiveOptions="{ exact: true }"  aria-haspopup="true"  data-menu-submenu-toggle="hover">
+				<a  href="#" class="m-menu__link m-menu__toggle">
+					<i class="m-menu__link-icon flaticon-users"></i>
+					<span class="m-menu__link-text">
+						CA Manager
+					</span>
+					<i class="m-menu__ver-arrow la la-angle-right"></i>
+				</a>
+				<div class="m-menu__submenu">
+					<span class="m-menu__arrow"></span>
+					<ul class="m-menu__subnav">
+						<li class="m-menu__item  m-menu__item--parent" routerLinkActive="m-menu__item--active" routerLinkActiveOptions="{ exact: true }"  aria-haspopup="true" >
+							<span class="m-menu__link">
+								<span class="m-menu__link-text">
+									Manage CA
+								</span>
+							</span>
+						</li>
+						<li class="m-menu__item" routerLinkActive="m-menu__item--active" routerLinkActiveOptions="{ exact: true }"  aria-haspopup="true" >
+							<a  routerLink="/causer" class="m-menu__link">
+								<i class="m-menu__link-bullet m-menu__link-bullet--dot">
+									<span></span>
+								</i>
+								<span class="m-menu__link-text">
+									Manage CA
+								</span>
+							</a>
+						</li> 
+                                                <li class="m-menu__item" routerLinkActive="m-menu__item--active" routerLinkActiveOptions="{ exact: true }"  aria-haspopup="true" >
+							<a  routerLink="/causer" class="m-menu__link">
+								<i class="m-menu__link-bullet m-menu__link-bullet--dot">
+									<span></span>
+								</i>
+								<span class="m-menu__link-text">
+									Add CA
+								</span>
+							</a>
+						</li> 
+                                                
+                                                <li class="m-menu__item" routerLinkActive="m-menu__item--active" routerLinkActiveOptions="{ exact: true }"  aria-haspopup="true" >
+							<a  routerLink="/profile" class="m-menu__link">
+								<i class="m-menu__link-bullet m-menu__link-bullet--dot">
+									<span></span>
+								</i>
+								<span class="m-menu__link-text">
+									My Profile
+								</span>
+							</a>
+						</li> 
+					</ul>
+				</div>
+			</li>
+                        
+                        
+                        <li class="m-menu__item  m-menu__item--submenu" routerLinkActive="m-menu__item--open" routerLinkActiveOptions="{ exact: true }"  aria-haspopup="true"  data-menu-submenu-toggle="hover">
+				<a  href="#" class="m-menu__link m-menu__toggle">
+					<i class="m-menu__link-icon flaticon-settings"></i>
+					<span class="m-menu__link-text">
+						Settings
+					</span>
+					<i class="m-menu__ver-arrow la la-angle-right"></i>
+				</a>
+				<div class="m-menu__submenu">
+					<span class="m-menu__arrow"></span>
+					<ul class="m-menu__subnav">
+						<li class="m-menu__item  m-menu__item--parent" routerLinkActive="m-menu__item--active" routerLinkActiveOptions="{ exact: true }"  aria-haspopup="true" >
+							<span class="m-menu__link">
+								<span class="m-menu__link-text">
+									Email Template
+								</span>
+							</span>
+						</li>
+                                                <li class="m-menu__item" routerLinkActive="m-menu__item--active" routerLinkActiveOptions="{ exact: true }"  aria-haspopup="true" >
+							<a  routerLink="/emailtemplate" class="m-menu__link">
+								<i class="m-menu__link-bullet m-menu__link-bullet--dot">
+									<span></span>
+								</i>
+								<span class="m-menu__link-text">
+									Manage Email Template
+								</span>
+							</a>
+						</li>
+						<li class="m-menu__item" routerLinkActive="m-menu__item--active" routerLinkActiveOptions="{ exact: true }"  aria-haspopup="true" >
+							<a  routerLink="/header/actions" class="m-menu__link">
+								<i class="m-menu__link-bullet m-menu__link-bullet--dot">
+									<span></span>
+								</i>
+								<span class="m-menu__link-text">
+									Add Email Template
+								</span>
+							</a>
+						</li> 
+                                                <li class="m-menu__item" routerLinkActive="m-menu__item--active" routerLinkActiveOptions="{ exact: true }"  aria-haspopup="true" >
+							<a  routerLink="/emailprofile" class="m-menu__link">
+								<i class="m-menu__link-bullet m-menu__link-bullet--dot">
+									<span></span>
+								</i>
+								<span class="m-menu__link-text">
+									Email Profile Settings
+								</span>
+							</a>
+						</li> 
+					</ul>
+				</div>
+			</li>
+                        
+                        
 			<li *ngFor="let menu of asideNavMenus" class="m-menu__item  m-menu__item--submenu" routerLinkActive="m-menu__item" routerLinkActiveOptions="{ exact: true }"  aria-haspopup="true"  data-menu-submenu-toggle="hover">
 				<a *ngIf="menu.sub_menu.length == 0 " routerLink="{{menu.url}}" class="m-menu__link m-menu__toggle">
 					<i class="m-menu__link-icon {{menu.icon_name}}"></i>
@@ -45,9 +197,28 @@
 									<span></span>
 								</i>
 								<span class="m-menu__link-text">
-									{{submenu.name}}
+									{{submenu.name}} ppp
 								</span>
 							</a>
+                                                    
+                                                    <a  routerLink="/components/forms/validation/form-controls" class="m-menu__link">
+											<i class="m-menu__link-bullet m-menu__link-bullet--dot">
+												<span></span>
+											</i>
+											<span class="m-menu__link-text">
+												Form Controls
+											</span>
+						   </a>
+                                                   <a  routerLink="/users" class="m-menu__link">
+											<i class="m-menu__link-bullet m-menu__link-bullet--dot">
+												<span></span>
+											</i>
+											<span class="m-menu__link-text">
+												Form Controls  ddd
+											</span>
+						   </a>
+                                                    
+                                                    
 						</li>
 
 					</ul>
