--- a/src/app/modules/vendorbilling/vendorbilling.component.html
+++ b/src/app/modules/vendorbilling/vendorbilling.component.html
@@ -3,7 +3,7 @@
     <div class="d-flex align-items-center">
         <div class="mr-auto">
             <h3 class="m-subheader__title m-subheader__title--separator">
-                Manage Email Template
+                Manage Vendor Billing
             </h3>
             <ul class="m-subheader__breadcrumbs m-nav m-nav--inline">
                 <li class="m-nav__item m-nav__item--home">
@@ -17,7 +17,7 @@
                 <li class="m-nav__item">
                     <a href="" (click)="goBack()" class="m-nav__link" >
                         <span class="m-nav__link-text">
-                            Users
+                            Vendor Bills
                         </span>
                     </a>
                 </li>
@@ -26,9 +26,9 @@
                 </li>
 
                 <li class="m-nav__item">
-                    <a href="" class="m-nav__link" (click)="addUser()">
+                    <a href="" class="m-nav__link" (click)="addVendorBilling()">
                         <span class="m-nav__link-text">
-                            Add Email Template
+                            Add BIll
                         </span>
                     </a>
                 </li>
@@ -110,117 +110,126 @@
 			<div class="m-portlet__head-caption">
 				<div class="m-portlet__head-title">
 					<h3 class="m-portlet__head-text">
-						Create Email Template
+						Add Bill
 					</h3>
 				</div>
 			</div>
 		</div>
 		<!--begin::Form-->
-		<form class="m-form m-form--fit m-form--label-align-right">
+		<form class="m-form m-form--fit m-form--label-align-right" id="m_form_1">
 			<div class="m-portlet__body">
-				<div class="form-group m-form__group row">
-					<label class="col-form-label col-lg-3 col-sm-12">
-						Subject
-					</label>
-					<div class="col-lg-7 col-md-7 col-sm-12">
-						<input type="text" class="form-control m-input" id="email_subject" name="email_subject" aria-describedby="Subject" placeholder="Enter Email Subject">
-						<span class="m-form__help">
-							Please enter email subject.
-					</span>
+				<div class="m-form__content">
+					<div class="m-alert m-alert--icon alert alert-danger m--hide" role="alert" id="m_form_1_msg">
+						<div class="m-alert__icon">
+							<i class="la la-warning"></i>
+						</div>
+						<div class="m-alert__text">
+							Oh snap! Change a few things up and try submitting again.
+						</div>
+						<div class="m-alert__close">
+							<button type="button" class="close" data-close="alert" aria-label="Close"></button>
+						</div>
 					</div>
-					
 				</div>
-				<div class="form-group m-form__group row">
+                            
+                <div class="form-group m-form__group row">
 					<label class="col-form-label col-lg-3 col-sm-12">
-						Body
-					</label>
-					<div class="col-lg-7 col-md-7 col-sm-12">
-						<textarea class="form-control m-input" name="template_body"  id ="template_body" title="Email Body" placeholder="HI...."></textarea>
-						<span class="m-form__help">
-							Please enter email body.
-					</span>
-					</div>
-					
-				</div>
-				<div class="form-group m-form__group row">
-					<label class="col-form-label col-lg-3 col-sm-12">
-						TO *
+						Bill Date *
 					</label>
 					<div class="col-lg-4 col-md-9 col-sm-12">
-						<select class="form-control m-input" name="email_to">
-							<option value="">
-								Select
-							</option>
-							<option>
-								Group Admin
-							</option>
-							<option>
-								Group Marketing
-							</option>
-							<option>
-								Group Finance
-							</option>
-						</select>
+						<input type="text" class="form-control m-input" name="bill_date" placeholder="Enter bill date" data-toggle="m-tooltip" title="Tooltip description">
 						<span class="m-form__help">
-							Please select an option.
+							Please enter bill date.
 						</span>
 					</div>
 				</div>
-				<div class="form-group m-form__group row">
+                <div class="form-group m-form__group row">
 					<label class="col-form-label col-lg-3 col-sm-12">
-						CC *
+						Bill Amount * 
 					</label>
 					<div class="col-lg-4 col-md-9 col-sm-12">
-						<select class="form-control m-input" name="email_cc">
-							<option value="">
-								Select
-							</option>
-							<option>
-								Group Admin
-							</option>
-							<option>
-								Group Marketing
-							</option>
-							<option>
-								Group Finance
-							</option>
-						</select>
+						<input type="text" class="form-control m-input" name="bill_amount" placeholder="Enter bill amount" data-toggle="m-tooltip" title="Tooltip description">
 						<span class="m-form__help">
-							Please select an option.
-						</span>
-					</div>
-				</div>
-				<div class="form-group m-form__group row">
-					<label class="col-form-label col-lg-3 col-sm-12">
-						BCC *
-					</label>
-					<div class="col-lg-4 col-md-9 col-sm-12">
-						<select class="form-control m-input" name="email_bcc">
-							<option value="">
-								Select
-							</option>
-							<option>
-								Group Admin
-							</option>
-							<option>
-								Group Marketing
-							</option>
-							<option>
-								Group Finance
-							</option>
-						</select>
-						<span class="m-form__help">
-							Please select an option.
+							Please enter bill amount.
 						</span>
 					</div>
 				</div>
 				
+				 <div class="form-group m-form__group row">
+					<label class="col-form-label col-lg-3 col-sm-12">
+						CGST Amount 
+					</label>
+					<div class="col-lg-4 col-md-9 col-sm-12">
+						<input type="text" class="form-control m-input" name="gst_amount" placeholder="Enter CGST amount" data-toggle="m-tooltip" title="Tooltip description">
+						<span class="m-form__help">
+							Please enter CGST amount.
+						</span>
+					</div>
+				</div>
+				<div class="form-group m-form__group row">
+					<label class="col-form-label col-lg-3 col-sm-12">
+						SGST Amount 
+					</label>
+					<div class="col-lg-4 col-md-9 col-sm-12">
+						<input type="text" class="form-control m-input" name="gst_amount" placeholder="Enter SGST amount" data-toggle="m-tooltip" title="Tooltip description">
+						<span class="m-form__help">
+							Please enter SGST amount.
+						</span>
+					</div>
+				</div>
+				<div class="form-group m-form__group row">
+					<label class="col-form-label col-lg-3 col-sm-12">
+						IGST Amount 
+					</label>
+					<div class="col-lg-4 col-md-9 col-sm-12">
+						<input type="text" class="form-control m-input" name="gst_amount" placeholder="Enter IGST amount" data-toggle="m-tooltip" title="Tooltip description">
+						<span class="m-form__help">
+							Please enter IGST amount.
+						</span>
+					</div>
+				</div>
+                <div class="form-group m-form__group row">
+					<label class="col-form-label col-lg-3 col-sm-12">
+						TDS Amount 
+					</label>
+					<div class="col-lg-4 col-md-9 col-sm-12">
+						<input type="text" class="form-control m-input" name="tds_amount" placeholder="Enter tds amount" data-toggle="m-tooltip" title="Tooltip description">
+						<span class="m-form__help">
+							Please enter tds amount.
+						</span>
+					</div>
+				</div>
+				
+				 <div class="form-group m-form__group row">
+					<label class="col-form-label col-lg-3 col-sm-12">
+						Bill Description
+					</label>
+					<div class="col-lg-4 col-md-9 col-sm-12">
+						<input type="text" class="form-control m-input" name="bill_description" placeholder="Enter bill description" data-toggle="m-tooltip" title="Tooltip description">
+						<span class="m-form__help">
+							Please enter bill Description.
+						</span>
+					</div>
+				</div>
+                <div class="form-group m-form__group row">
+					<label class="col-form-label col-lg-3 col-sm-12">
+						Bill Upload  
+					</label>
+					<div class="col-lg-4 col-md-9 col-sm-12">
+						<input type="file" class="form-control m-input" name="bill_file" placeholder="Upload Bill" data-toggle="m-tooltip" title="Tooltip description">
+						<span class="m-form__help">
+							Please upload bill.
+						</span>
+					</div>
+				</div>
+ 
+      
 			</div>
 			<div class="m-portlet__foot m-portlet__foot--fit">
 				<div class="m-form__actions m-form__actions">
 					<div class="row">
 						<div class="col-lg-9 ml-lg-auto">
-							<button type="reset" class="btn btn-brand">
+							<button type="submit" class="btn btn-success">
 								Submit
 							</button>
 							<button type="reset" class="btn btn-secondary">
@@ -233,8 +242,10 @@
 		</form>
 		<!--end::Form-->
 	</div>
-	<!--end::Portlet-->
+	<!--end::Portlet-->  <!--begin::Portlet-->
+	
 </div>
+
 </ng-container>
 
 
@@ -249,7 +260,7 @@
                         <div class="m-portlet__head-caption">
                             <div class="m-portlet__head-title">
                                 <h3 class="m-portlet__head-text">
-                                    Templates
+                                    Bills
                                 </h3>
                             </div>
                         </div>
@@ -265,16 +276,17 @@
                                                 #
                                             </th>
                                             <th>
-                                                Subject
+                                                Bill Date
                                             </th>
                                             <th>
-                                                Body
+                                                Bill Amount
                                             </th>
-                                            
-                                            <th>
-                                                Created At
+                                             <th>
+                                                GST Amount
                                             </th>
-                                            
+											 <th>
+                                                TDS Amount
+                                            </th>
                                             <th>
                                                 Status
                                             </th>
@@ -284,21 +296,21 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr *ngFor="let bill of userList; let i = index;">
+                                        <tr *ngFor="let bill of vendorBillingList; let i = index;">
                                             <th scope="row">
-                                                {{userList[i].id}}
+                                                {{vendorBillingList[i].id}}
                                             </th>
                                             <td>
-                                                {{userList[i].first_name}} {{userList[i].last_name}}
+                                                {{vendorBillingList[i].bill_date}} 
+                                            </td>
+                                           <td>
+                                                {{vendorBillingList[i].bill_amount}} 
+                                            </td>
+											<td>
+                                                {{vendorBillingList[i].gst_amount}} 
                                             </td>
                                             <td>
-                                                Individual
-                                            </td>
-                                            <td>
-                                                {{userList[i].mobile}}
-                                            </td>
-                                            <td>
-                                                {{userList[i].email}}
+                                                {{vendorBillingList[i].tax_amount}}
                                             </td>
                                             
                                             <td data-field="Status" class="m-datatable__cell"><span style="width: 110px;"><span class="m-badge  m-badge--success m-badge--wide">Active</span></span></td>
@@ -313,8 +325,8 @@
                                                              <a class="dropdown-item" href="#"><i class="la la-print"></i> Generate Report</a>
                                                          </div>
                                                     </div>
-                                                    <a href="#" class="m-portlet__nav-link btn m-btn m-btn--hover-accent m-btn--icon m-btn--icon-only m-btn--pill" title="Edit details" (click)="editUser(userList[i].id)"><i class="la la-edit"></i></a>
-                                                    <a href="#" class="m-portlet__nav-link btn m-btn m-btn--hover-danger m-btn--icon m-btn--icon-only m-btn--pill" title="Delete" (click)="deleteUser(userList[i].id)">
+                                                    <a href="#" class="m-portlet__nav-link btn m-btn m-btn--hover-accent m-btn--icon m-btn--icon-only m-btn--pill" title="Edit details" (click)="editUser(vendorBillingList[i].id)"><i class="la la-edit"></i></a>
+                                                    <a href="#" class="m-portlet__nav-link btn m-btn m-btn--hover-danger m-btn--icon m-btn--icon-only m-btn--pill" title="Delete" (click)="deleteUser(vendorBillingList[i].id)">
                                                     <i class="la la-trash"></i></a>
                                                 </span>
                                             </td>
