--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -153,7 +153,7 @@
                                     <input type="text" class="form-control m-input" placeholder="Enter first name" formControlName="firstname" [(ngModel)]="userData.firstname">
                                     <span class="m-form__help">
                                         Please enter your first name
-                                    </span> {{userData.firstname}}
+                                    </span> 
                                 </div>
                                 <div class="col-lg-6">
                                     <label class="">
@@ -162,7 +162,7 @@
                                     <input type="text" class="form-control m-input" placeholder="Enter last name" formControlName="lastname" [(ngModel)]="userData.lastname">
                                     <span class="m-form__help">
                                         Please enter your last name
-                                    </span> {{userData.lastname}} 
+                                    </span> 
                                 </div>
                             </div>
                             <div class="form-group m-form__group row">
@@ -174,44 +174,33 @@
                                     </label>
                                      
                                     <input type="text" class="form-control m-input" placeholder="Enter email" formControlName="email" [(ngModel)]="userData.email">
-                                    {{userData.email}} 
                                     
                                     <span class="m-form__help">
                                         Please enter your email address
                                     </span>
                                 </div>
+                                
                                 <div class="col-lg-6">
                                     <label class="">
                                         Client Type: 
                                     </label>
                                     
-                                    <select class="form-control m-input" name="option">
-                                            <option value="">
-                                                    Select
-                                            </option>
-                                            <option>
-                                                    1
-                                            </option>
-                                            <option>
-                                                    2
-                                            </option>
-                                            <option>
-                                                    3
-                                            </option>
-                                            <option>
-                                                    4
-                                            </option>
-                                            <option>
-                                                    5
-                                            </option>
+                                    <select formControlName="client_type" [(ngModel)]="userData.client_type" class="form-control m-input" name="option">
+                                            <option value="">Select</option>
+                                             <option value="1">Individual</option>
+                                            <option value="2">Sole Proprietorship</option>
+                                             <option value="3">HUF (Hindu Undivided Family)</option>
+                                             <option value="4">BOI ( Body of Individual)</option>
+                                            <option value="5">Limited Liability Partnership Firm</option>
+                                             <option value="6">Private Limited Company</option>
+                                             <option value="7">Public Company</option>
                                     </select>
                                     
-                                    <input type="text" class="form-control m-input" placeholder="Select client type"  formControlName="client_type" [(ngModel)]="userData.client_type">
                                     <span class="m-form__help">
                                         Choose client type
-                                        {{userData.client_type}} 
                                     </span>
                                 </div>
+                                
                             </div>
                             
                             <div class="form-group m-form__group row">
@@ -249,7 +238,7 @@
                                     <label class="">
                                         Repeat your password:
                                     </label>
-                                    <input type="text" class="form-control m-input" placeholder="Enter your password"   formControlName="passwor_confirmation" [(ngModel)]="userData.passwor_confirmation">
+                                    <input type="text" class="form-control m-input" placeholder="Enter your password"   formControlName="password_confirmation" [(ngModel)]="userData.password_confirmation">
                                     <span class="m-form__help">
                                         Please repeat your password
                                     </span>
@@ -383,6 +372,163 @@
                     <!--end::Form-->
                 </div>
                 <!--end::Portlet--> 
+
+                <!--end::Portlet-->  		<!--begin::Portlet-->
+
+                <!--end::Portlet-->
+            </div>
+        </div>
+    </div>
+</ng-container>
+
+<ng-container *ngIf="editView">
+    <div class="m-content">
+        <div class="row">
+            <div class="col-lg-12">
+                <!--begin::Portlet-->
+                <div class="m-portlet">
+                    <div class="m-portlet__head">
+                        <div class="m-portlet__head-caption">
+                            <div class="m-portlet__head-title">
+                                <span class="m-portlet__head-icon m--hide">
+                                    <i class="la la-gear"></i>
+                                </span>
+                                <h3 class="m-portlet__head-text">
+                                    Edit USER
+                                </h3>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--begin::Form-->
+                    
+                    <form class="m-form m-form--fit m-form--label-align-right m-form--group-seperator-dashed" [formGroup]="editFormGroup" (ngSubmit)="editFormSubmit(userData.id)"   title="testing">
+                        <div class="m-portlet__body">
+                            <div class="form-group m-form__group row">
+                                <div class="col-lg-6">
+                                    <label>
+                                        First Name:
+                                    </label> 
+                                    <input type="hidden" class="form-control m-input" placeholder="Enter first name" formControlName="id"  [(ngModel)]="userData.id" >
+                                    <input type="text" class="form-control m-input" placeholder="Enter first name" formControlName="firstname"  [(ngModel)]="userData.firstname">
+                                    <span class="m-form__help">
+                                        Please enter your first name
+                                    </span> 
+                                </div>
+                                <div class="col-lg-6">
+                                    <label class="">
+                                        Last Name:
+                                    </label>
+                                    <input type="text" class="form-control m-input" placeholder="Enter last name" formControlName="lastname"  [(ngModel)]="userData.lastname">
+                                    <span class="m-form__help">
+                                        Please enter your last name
+                                    </span> 
+                                </div>
+                            </div>
+                            <div class="form-group m-form__group row">
+
+
+                                <div class="col-lg-6">
+                                    <label>
+                                        Email Address
+                                    </label>
+                                     
+                                    <input type="text" class="form-control m-input" placeholder="Enter email" formControlName="email"  [(ngModel)]="userData.email">
+                                   
+                                    
+                                    <span class="m-form__help">
+                                        Please enter your email address
+                                    </span>
+                                </div>
+                                <div class="col-lg-6">
+                                    <label class="">
+                                        Client Type: 
+                                    </label>
+                                    
+                                    <select formControlName="client_type" [(ngModel)]="userData.client_type" class="form-control m-input" name="option">
+                                            <option value="">Select</option>
+                                             <option value="1">Individual</option>
+                                            <option value="2">Sole Proprietorship</option>
+                                             <option value="3">HUF (Hindu Undivided Family)</option>
+                                             <option value="4">BOI ( Body of Individual)</option>
+                                            <option value="5">Limited Liability Partnership Firm</option>
+                                             <option value="6">Private Limited Company</option>
+                                             <option value="7">Public Company</option>
+                                    </select>
+                                    
+                                    <span class="m-form__help">
+                                        Choose client type
+                                    </span>
+                                </div>
+                            </div>
+                            
+                            <div class="form-group m-form__group row">
+                                <div class="col-lg-6">
+                                    <label>
+                                        Phone Number:
+                                    </label>
+                                    <input type="text" class="form-control m-input" placeholder="Enter phone number" formControlName="phonenumber" [(ngModel)]="userData.phonenumber">
+                                    <span class="m-form__help">
+                                        Please enter your phone number
+                                    </span>
+                                </div>
+                                <div class="col-lg-6">
+                                    <label class="">
+                                        Upload your avatar:
+                                    </label>
+                                    <input type="text" class="form-control m-input" placeholder="Leave it or now"  formControlName="profilepic" [(ngModel)]="userData.profilepic">
+                                    <span class="m-form__help">
+                                        Please upload your avatar
+                                    </span>
+                                </div>
+                            </div>
+                            
+                            <div class="form-group m-form__group row">
+                                <div class="col-lg-6">
+                                    <label>
+                                        Password:
+                                    </label>
+                                    <input type="text" class="form-control m-input" placeholder="Enter your password"    formControlName="password" [(ngModel)]="userData.password">
+                                    <span class="m-form__help">
+                                        Please enter your password:
+                                    </span>
+                                </div>
+                                <div class="col-lg-6">
+                                    <label class="">
+                                        Repeat your password:
+                                    </label>
+                                    <input type="text" class="form-control m-input" placeholder="Enter your password"   formControlName="password_confirmation" [(ngModel)]="userData.password_confirmation">
+                                    <span class="m-form__help">
+                                        Please repeat your password
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="m-portlet__foot m-portlet__no-border m-portlet__foot--fit">
+                            <div class="m-form__actions m-form__actions--solid">
+                                <div class="row">
+                                    <div class="col-lg-6">
+                                        <button type="submit" class="btn btn-primary">
+                                            Save
+                                        </button>
+                                        <button type="reset" class="btn btn-secondary">
+                                            Cancel
+                                        </button>
+                                    </div>
+                                    <!--<div class="col-lg-6 m--align-right">
+                                            <button type="reset" class="btn btn-danger">
+                                                    Delete
+                                            </button>
+                                    </div> -->
+                               </div>
+                            </div>
+                        </div>
+                    </form> 
+                    <!--end::Form-->
+                </div>
+                <!--end::Portlet-->  		<!--begin::Portlet-->
+
+                <!--end::Portlet-->  		<!--begin::Portlet-->
 
                 <!--end::Portlet-->  		<!--begin::Portlet-->
 
