--- a/src/app/modules/causer/causer.component.html
+++ b/src/app/modules/causer/causer.component.html
@@ -611,7 +611,7 @@
                                                         </div>
                                                     </div>
                                                     <a href="#" class="m-portlet__nav-link btn m-btn m-btn--hover-accent m-btn--icon m-btn--icon-only m-btn--pill" title="Edit details" (click)="editUser(userList[i].id)"><i class="la la-edit"></i></a>
-                                                    <a href="#" class="m-portlet__nav-link btn m-btn m-btn--hover-danger m-btn--icon m-btn--icon-only m-btn--pill" title="Delete" (click)="deleteUser(userList[i].id)">
+                                                    <a href="#" class="m-portlet__nav-link btn m-btn m-btn--hover-danger m-btn--icon m-btn--icon-only m-btn--pill" title="Delete" (click)="confirmDelete(userList[i].first_name,userList[i].id)">
                                                         <i class="la la-trash"></i></a>
                                                 </span>
                                             </td>
@@ -930,7 +930,6 @@
                             </span>
                         </div>
                     </div>
-
                     <div class="form-group m-form__group row">
                         <label class="col-form-label col-lg-3 col-sm-12">
                             Office Phone  *
@@ -942,8 +941,6 @@
                             </span>
                         </div>
                     </div>
-
-
 
                     <div class="m-form__seperator m-form__seperator--dashed m-form__seperator--space"></div>
                     <div class="m-form__heading">
